# taskasaurus-rex

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/db/: database.py
app/models/: __init__.py  base.py  category.py  task.py
app/routes/: calendar_router.py  categories_router.py  tasks_router.py
app/schemas/: category.py  task.py
app/services/: __init__.py  calendar_service.py  category_service.py  task_service.py
tests/: conftest.py  test_main.py
tests/api/: test_calendar.py  test_categories.py  test_tasks.py
